apps/arcs/chi/base/chi-bus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chi-bus
  namespace: arc-chi
  labels:
    app: chi-bus
    sage.arc: "true"
    arc.name: "chi"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chi-bus
  template:
    metadata:
      labels:
        app: chi-bus
        sage.arc: "true"
        arc.name: "chi"
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
        - key: node.kubernetes.io/not-ready
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 300
        - key: node.kubernetes.io/unreachable
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 300
      containers:
        - name: chi-bus
          image: nats:2.10-alpine
          command: ["nats-server"]
          ports:
            - containerPort: 4222
              name: client
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
