apps/arcs/chi/base/chi-bus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chi-bus
  namespace: arc-chi
  labels:
    app: chi-bus
spec:
  type: ClusterIP
  ports:
    - port: 4222
      targetPort: 4222
      protocol: TCP
      name: client
  selector:
    app: chi-bus
